# Terragen

./: .gitignore  CMakeLists.txt  README.md  __init__.py  cli.py  pyproject.toml  registry.py  requirements.txt  rng.py  types.py
cpp/: bindings.cpp  perlin.cpp
export/: obj.py  png.py
noise/: __init__.py  base.py  diamond_square.py  perlin.py  worley.py
pipelines/: one_d.py  two_d.py
post/: __init__.py  erosion.py
python/: pyproject.toml
python/terragen/: __init__.py  cli.py  core.py  exports.py  visualize.py
viz/: matplotlib_viz.py
